...
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="4dp" />

    <Button
        android:id="@+id/titleChannel"
        style="?attr/BS_Fill"
        android:layout_width="wrap_content"
        app:icon ="@drawable/ic_open_in_new"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:ellipsize="end"
...
        android:ellipsize="end"
        android:gravity="start"
        android:lines="1"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/guideEnd"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/imageVideo"
        tools:text="Заголовок" />

    <ImageView
        android:id="@+id/imageVideo"
        android:layout_width="0dp"
        android:layout_height="250dp"
...
